--- a/app/src/main/res/layout/activity_win.xml
+++ b/app/src/main/res/layout/activity_win.xml
@@ -36,7 +36,15 @@
             android:text="0"
             android:textSize="50sp"
             android:gravity="center"
-            android:layout_marginBottom="50dp"/>
+            android:layout_marginBottom="25dp"/>
+        <TextView
+            android:id="@+id/dificult_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Уровень сложности:\nСредний"
+            android:gravity="center"
+            android:textSize="30sp"
+            android:layout_marginBottom="30dp"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
