--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,15 +6,34 @@
     android:layout_height="match_parent"
     tools:context=".Activity.GameActivity">
 
-    <TextView
-        android:id="@+id/countSteps"
-        android:layout_width="wrap_content"
-        android:text="0"
-        android:textSize="100sp"
+    <LinearLayout
+        android:id="@+id/score_and_time"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/countSteps"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:text="0"
+            android:textSize="80sp"
+            android:gravity="center"/>
+
+        <Chronometer
+            android:id="@+id/chronometer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="10dp"
+            android:textSize="80sp"
+            android:layout_gravity="center"
+            android:gravity="end"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/game_layout"
@@ -25,7 +44,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/countSteps">
+        app:layout_constraintTop_toBottomOf="@+id/score_and_time">
 
         <TableLayout
             android:id="@+id/cardBoard"
