--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Next"
-            android:textSize="25sp"
+            android:textSize="25sp"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
