--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,88 +7,98 @@
     tools:context=".Activity.SettingsActivity">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/settings_dificult"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:orientation="horizontal"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp">
-
-        <TextView
-            android:id="@+id/settings_dificult_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_gravity="center"
-            android:textSize="25sp"
-            android:text="Dificult:"/>
-
-        <Button
-            android:id="@+id/dificult_five"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5 карт"
-            android:layout_gravity="center"
-            android:textSize="15sp" />
-
-        <Button
-            android:id="@+id/dificult_ten"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="10 карт"
-            android:layout_gravity="center"
-            android:textSize="15sp" />
-
-        <Button
-            android:id="@+id/dificult_fifteen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="15 карт"
-            android:layout_gravity="center"
-            android:textSize="15sp" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/settings_volume"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="50dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Volume:"
-            android:textSize="25sp" />
-
-        <SeekBar
-            android:id="@+id/seek_bar_volume"
+        <LinearLayout
+            android:id="@+id/settings_dificult"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginEnd="5dp"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:id="@+id/settings_dificult_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:text="Dificult:"
+                android:textSize="25sp" />
+
+            <Button
+                android:id="@+id/dificult_five"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="5 карт"
+                android:textSize="15sp" />
+
+            <Button
+                android:id="@+id/dificult_ten"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="10 карт"
+                android:textSize="15sp" />
+
+            <Button
+                android:id="@+id/dificult_fifteen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="15 карт"
+                android:textSize="15sp" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/settings_volume"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="50dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Volume:"
+                android:textSize="25sp" />
+
+            <SeekBar
+                android:id="@+id/seek_bar_volume"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:progress="100" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/save_settings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Save"
+            android:textSize="20sp"
+            android:backgroundTint="@color/purple_200"/>
+
+        <Button
+            android:id="@+id/logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:progress="100" />
+            android:gravity="center"
+            android:layout_marginTop="200dp"
+            android:text="Logout" />
     </LinearLayout>
-
-    <Button
-        android:id="@+id/logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_gravity="center"
-        android:text="Logout"/>
-    </LinearLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
